@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>de.osthus</groupId>
 		<artifactId>osthus-pom</artifactId>
-		<version>0.0.31</version>
+		<version>0.0.34</version>
 	</parent>
 
 	<properties>
@@ -855,33 +855,6 @@
 						<configuration>
 							<forkCount>1C</forkCount>
 							<reuseForks>true</reuseForks>
-							<!-- add argLine only if jacoco is activated like it is in the jenkins profile -->
-							<argLine>-XX:MaxPermSize=128m ${argLine}</argLine>
-							<systemPropertyVariables>
-								<ambeth.test.forkname>f${surefire.forkNumber}</ambeth.test.forkname>
-							</systemPropertyVariables>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		
-		<profile>
-			<id>non-jenkins</id>
-			<activation>
-				<property>
-					<name>!env.JENKINS_HOME</name>
-				</property>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<configuration>
-							<forkCount>1C</forkCount>
-							<reuseForks>true</reuseForks>
-							<argLine>-XX:MaxPermSize=128m</argLine>
 							<systemPropertyVariables>
 								<ambeth.test.forkname>f${surefire.forkNumber}</ambeth.test.forkname>
 							</systemPropertyVariables>
